--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<p>
-		We can optimize a solution using both time and space optimization. To optimize a program,
+		We can optimize a solution using both time and space optimization. <br>
+		To optimize a program,
 	</p>
 	
 	<ol>
